@@ -10,13 +10,13 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 public class CourseServiceTest {
@@ -30,7 +30,7 @@ public class CourseServiceTest {
     void givenGetAllCourses_whenCoursesExist_thenReturnListOfCourses() {
         Course course1 = new Course("Course 1", 3);
         Course course2 = new Course("Course 2", 4);
-        when(courseRepository.findAll()).thenReturn(Arrays.asList(course1, course2));
+        when(courseRepository.findAll()).thenReturn(List.of(course1, course2));
         List<Course> courses = courseService.getAllCourses();
         assertEquals(2, courses.size());
     }
@@ -39,6 +39,7 @@ public class CourseServiceTest {
     void givenGetAllCourses_whenNoCoursesExist_thenReturnEmptyList() {
         when(courseRepository.findAll()).thenReturn(List.of());
         List<Course> courses = courseService.getAllCourses();
+
         assertEquals(0, courses.size());
     }
 
@@ -49,28 +50,21 @@ public class CourseServiceTest {
         when(courseRepository.findByName(input.name())).thenReturn(Optional.empty());
         when(courseRepository.save(any(Course.class))).thenReturn(savedCourse);
         Course result = courseService.addCourse(input);
+
         assertEquals(savedCourse.getName(), result.getName());
         assertEquals(savedCourse.getStudy_points(), result.getStudy_points());
+
+        verify(courseRepository).save(any(Course.class));
     }
 
     @Test
     void givenAddCourse_whenCourseAlreadyExists_thenThrowException() {
         CourseInput input = new CourseInput("Course 1", 3);
         when(courseRepository.findByName(input.name())).thenReturn(Optional.of(new Course()));
-        try {
-            courseService.addCourse(input);
-        } catch (RuntimeException e) {
-            assertEquals("Course with name " + input.name() + " already exists", e.getMessage());
-        }
-    }
 
-    @Test
-    void givenAddCourse_whenNegativeStudyPoints_thenThrowException() {
-        CourseInput input = new CourseInput("Course 1", -3);
-        try {
-            courseService.addCourse(input);
-        } catch (RuntimeException e) {
-            assertEquals("Study points cannot be negative", e.getMessage());
-        }
+        RuntimeException exception = assertThrows(RuntimeException.class, () -> courseService.addCourse(input));
+        assertEquals("Course with name Course 1 already exists", exception.getMessage());
+
+        verify(courseRepository, never()).save(any(Course.class));
     }
 }
